@@ -1,4 +1,7 @@
 
+- Parser:
+-- error message for: "Identifier too long" (Perl limit is 251 characters)
+
 9.015 cpan:Perlito5  2015-12-01
 - Docs:
 -- cookbook entry "Obtaining a Perl compiler script that runs in the browser"
